force-app/main/default/objects/Case/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <formula>IF(  Innova_IsApproved__c =true, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;,&quot;Green&quot;),
IF (  Innova_IsRejected__c =true,IMAGE(&quot;/img/permissions_deny16.gif&quot;, &quot;Red&quot;),
IF ((ISPICKVAL(Status,&quot;Submitted for Approval&quot;)),IMAGE(&quot;/img/alohaSkin/help_orange.png&quot;, &quot;Yellow&quot;),
IMAGE(&quot;/img/checkbox_unchecked.gif&quot;, &quot;None&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ApprovalStatus</label>
    <type>Text</type>
</CustomField>