force-app/main/default/objects/Case/fields/Case_Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Full_Name__c</fullName>
    <formula>if(BEGINS(OwnerId,&apos;005&apos;),Owner:User.FirstName &amp; &apos; &apos; &amp; Owner:User.LastName, Owner:Queue.QueueName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Full Name</label>
    <type>Text</type>
</CustomField>