force-app/main/default/objects/Case/fields/Contact_Location__c.field-meta.xml
<CustomField>
    <fullName>Contact_Location__c</fullName>
    <formula>Contact.Office_Location__c</formula>
    <label>Contact Location</label>
    <type>Text</type>
</CustomField>