force-app/main/default/objects/Case/fields/Contacts_Record__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Record__c</fullName>
    <formula>if( Contact.Email = $User.Email , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contacts Record</label>
    <type>Checkbox</type>
</CustomField>