force-app/main/default/objects/Case/fields/Created_by_User_id__c.field-meta.xml
<CustomField>
    <fullName>Created_by_User_id__c</fullName>
    <formula>CreatedBy.Id =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by = $User.id</label>
    <type>Checkbox</type>
</CustomField>