force-app/main/default/objects/Case/fields/Current_Queue__c.field-meta.xml
<CustomField>
    <fullName>Current_Queue__c</fullName>
    <label>Current Queue (OLD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>