force-app/main/default/objects/Case/fields/Elapsed_Time_hours__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_Time_hours__c</fullName>
    <description>Elapsed time from milestone object</description>
    <label>Elapsed Time [hours]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>