force-app/main/default/objects/Case/fields/Filter_Contact__c.field-meta.xml
<CustomField>
    <fullName>Filter_Contact__c</fullName>
    <formula>IF( $User.FirstName +  $User.LastName  =  Contact.FirstName +  Contact.LastName, true, false)</formula>
    <label>Filter Contact</label>
    <type>Checkbox</type>
</CustomField>