force-app/main/default/objects/Case/fields/Innavo_Escalate_to_Major_Incident__c.field-meta.xml
<CustomField>
    <fullName>Innavo_Escalate_to_Major_Incident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalate to Major Incident</label>
    <type>Checkbox</type>
</CustomField>