force-app/main/default/objects/Case/fields/Innova_Add_Queue_Membership__c.field-meta.xml
<CustomField>
    <fullName>Innova_Add_Queue_Membership__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Field not used in active flow</inlineHelpText>
    <label>Add Queue Membership</label>
    <type>Checkbox</type>
</CustomField>