force-app/main/default/objects/Case/fields/Innova_Agent_Comments__c.field-meta.xml
<CustomField>
    <fullName>Innova_Agent_Comments__c</fullName>
    <label>Agent Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>