force-app/main/default/objects/Case/fields/Innova_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Innova_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assigned</label>
    <type>Checkbox</type>
</CustomField>