force-app/main/default/objects/Case/fields/Innova_Brand__c.field-meta.xml
<CustomField>
    <fullName>Innova_Brand__c</fullName>
    <label>Brand</label>
    <length>20</length>
    <type>Text</type>
</CustomField>