force-app/main/default/objects/Case/fields/Innova_Case_Exit__c.field-meta.xml
<CustomField>
    <fullName>Innova_Case_Exit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Entitlement process custom criteria</description>
    <label>Case Exit</label>
    <type>Checkbox</type>
</CustomField>