force-app/main/default/objects/Case/fields/Innova_Category1__c.field-meta.xml
<CustomField>
    <fullName>Innova_Category1__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Innova_Service1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access Control</fullName>
            </value>
            <value>
                <fullName>Application Support</fullName>
            </value>
            <value>
                <fullName>AR - VCG</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Breakroom</fullName>
            </value>
            <value>
                <fullName>Commissions</fullName>
            </value>
            <value>
                <fullName>Compensation</fullName>
            </value>
            <value>
                <fullName>Compliance and Reports</fullName>
            </value>
            <value>
                <fullName>Consultant Care - HireGenics</fullName>
            </value>
            <value>
                <fullName>Consultant Care - Innova</fullName>
            </value>
            <value>
                <fullName>Copier</fullName>
            </value>
            <value>
                <fullName>Customer Account Support</fullName>
            </value>
            <value>
                <fullName>Employee Job Data</fullName>
            </value>
            <value>
                <fullName>Employee Relations</fullName>
            </value>
            <value>
                <fullName>Employment Verifications</fullName>
            </value>
            <value>
                <fullName>Facilities US</fullName>
            </value>
            <value>
                <fullName>Field Employee Pay</fullName>
            </value>
            <value>
                <fullName>Field Ops - Innova</fullName>
            </value>
            <value>
                <fullName>Field Support - Innova</fullName>
            </value>
            <value>
                <fullName>General HR</fullName>
            </value>
            <value>
                <fullName>Creative &amp; Design</fullName>
            </value>
            <value>
                <fullName>General Repair</fullName>
            </value>
            <value>
                <fullName>Hiregenics</fullName>
            </value>
            <value>
                <fullName>HR Ops</fullName>
            </value>
            <value>
                <fullName>HR Technology</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Internal Security – SOC</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Janitorial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>