force-app/main/default/objects/Case/fields/Innova_Change_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Innova_Change_Record_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Record Type</label>
    <type>Checkbox</type>
</CustomField>