force-app/main/default/objects/Case/fields/Innova_Check_For_Manager__c.field-meta.xml
<CustomField>
    <fullName>Innova_Check_For_Manager__c</fullName>
    <formula>If( Innova_Manager__r.Id &lt;&gt; $User.Id , True, False )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check For Manager</label>
    <type>Checkbox</type>
</CustomField>