force-app/main/default/objects/Case/fields/Innova_Converted__c.field-meta.xml
<CustomField>
    <fullName>Innova_Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted</label>
    <type>Checkbox</type>
</CustomField>