force-app/main/default/objects/Case/fields/Innova_Current_Agent__c.field-meta.xml
<CustomField>
    <fullName>Innova_Current_Agent__c</fullName>
    <formula>IF(BEGINS( OwnerId, &quot;005&quot;), Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName , &quot;&quot;)</formula>
    <label>Current Agent</label>
    <type>Text</type>
</CustomField>