force-app/main/default/objects/Case/fields/Innova_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Innova_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>