force-app/main/default/objects/Case/fields/Innova_Employee_Type__c.field-meta.xml
<CustomField>
    <fullName>Innova_Employee_Type__c</fullName>
    <label>Employee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billable</fullName>
            </value>
            <value>
                <fullName>Non-Billable</fullName>
            </value>
            <value>
                <fullName>Third Party Resource</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>