force-app/main/default/objects/Case/fields/Innova_End_User_Comment__c.field-meta.xml
<CustomField>
    <fullName>Innova_End_User_Comment__c</fullName>
    <label>End User Comment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>