force-app/main/default/objects/Case/fields/Innova_Extension_to_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Innova_Extension_to_Closed_Date__c</fullName>
    <formula>(NOW() - ClosedDate) * 24 &lt; 72</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extension to Closed Date</label>
    <type>Checkbox</type>
</CustomField>