force-app/main/default/objects/Case/fields/Innova_FedEx_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Innova_FedEx_Tracking_Number__c</fullName>
    <label>FedEx - Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>