force-app/main/default/objects/Case/fields/Innova_Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Innova_Hiring_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hiring Manager</label>
    <type>Checkbox</type>
</CustomField>