force-app/main/default/objects/Case/fields/Innova_IsApproved__c.field-meta.xml
<CustomField>
    <fullName>Innova_IsApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsApproved</label>
    <type>Checkbox</type>
</CustomField>