force-app/main/default/objects/Case/fields/Innova_IsRejected__c.field-meta.xml
<CustomField>
    <fullName>Innova_IsRejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRejected</label>
    <type>Checkbox</type>
</CustomField>