force-app/main/default/objects/Case/fields/Innova_Issue__c.field-meta.xml
<CustomField>
    <fullName>Innova_Issue__c</fullName>
    <description>Field used as a 5th category for reporting on a case issue / fix</description>
    <label>Issue</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Innova_Sub_Subcategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Access / Permission Issue</fullName>
            </value>
            <value>
                <fullName>Access /Permissions Management</fullName>
                <isActive>false</isActive>
                <label>Access /Permissions Management</label>
            </value>
            <value>
                <fullName>Access Issue</fullName>
            </value>
            <value>
                <fullName>Access Related</fullName>
            </value>
            <value>
                <fullName>Access Related (New or Modified)</fullName>
            </value>
            <value>
                <fullName>Access Related (RO/RW)</fullName>
            </value>
            <value>
                <fullName>Access Related (Terminate)</fullName>
            </value>
            <value>
                <fullName>Access Request</fullName>
            </value>
            <value>
                <fullName>Account Codes</fullName>
            </value>
            <value>
                <fullName>Account Creation/Removal</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Account Setup</fullName>
            </value>
            <value>
                <fullName>Activity code issue</fullName>
            </value>
            <value>
                <fullName>Add/Change Permissions</fullName>
            </value>
            <value>
                <fullName>Add/update/remove a Factor</fullName>
            </value>
            <value>
                <fullName>Add/update/remove a Question</fullName>
            </value>
            <value>
                <fullName>Add/update/remove a Sub-Factor</fullName>
            </value>
            <value>
                <fullName>Add/update/remove a Test</fullName>
            </value>
            <value>
                <fullName>Add a new Account</fullName>
            </value>
            <value>
                <fullName>Add a New User</fullName>
            </value>
            <value>
                <fullName>Add at Assignment Level</fullName>
            </value>
            <value>
                <fullName>Add at Employement Level</fullName>
            </value>
            <value>
                <fullName>Add at Placement Level</fullName>
            </value>
            <value>
                <fullName>Add Customer</fullName>
            </value>
            <value>
                <fullName>Additional assignment issue</fullName>
            </value>
            <value>
                <fullName>Add new user and access</fullName>
            </value>
            <value>
                <fullName>Address update request</fullName>
            </value>
            <value>
                <fullName>Add User</fullName>
            </value>
            <value>
                <fullName>Adhoc Request</fullName>
            </value>
            <value>
                <fullName>Alter the user and access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>