force-app/main/default/objects/Case/fields/Innova_Location__c.field-meta.xml
<CustomField>
    <fullName>Innova_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Innova_Location__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>