force-app/main/default/objects/Case/fields/Innova_Manager__c.field-meta.xml
<CustomField>
    <fullName>Innova_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>