force-app/main/default/objects/Case/fields/Innova_New_Hire_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Innova_New_Hire_Full_Name__c</fullName>
    <label>New Hire Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>