force-app/main/default/objects/Case/fields/Innova_Open_Task_Count__c.field-meta.xml
<CustomField>
    <fullName>Innova_Open_Task_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Open Task Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>