force-app/main/default/objects/Case/fields/Innova_Others_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Innova_Others_Ticket__c</fullName>
    <formula>Contact.Email  &lt;&gt;  CreatedBy.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Others Ticket</label>
    <type>Checkbox</type>
</CustomField>