force-app/main/default/objects/Case/fields/Innova_Pending_Reason__c.field-meta.xml
<CustomField>
    <fullName>Innova_Pending_Reason__c</fullName>
    <label>Pending Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>