force-app/main/default/objects/Case/fields/Innova_Preferred_contact_method__c.field-meta.xml
<CustomField>
    <fullName>Innova_Preferred_contact_method__c</fullName>
    <label>Preferred contact method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
                <label>Chat(Teams)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>