force-app/main/default/objects/Case/fields/Innova_Preferred_contact_method_Email1__c.field-meta.xml
<CustomField>
    <fullName>Innova_Preferred_contact_method_Email1__c</fullName>
    <label>Preferred contact method - Email</label>
    <type>Email</type>
</CustomField>