force-app/main/default/objects/Case/fields/Innova_Queue_Membership_User__c.field-meta.xml
<CustomField>
    <fullName>Innova_Queue_Membership_User__c</fullName>
    <formula>$User.Innova_Queue_Membership__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Queue Membership User</label>
    <type>Text</type>
</CustomField>