force-app/main/default/objects/Case/fields/Innova_Region__c.field-meta.xml
<CustomField>
    <fullName>Innova_Region__c</fullName>
    <label>Region</label>
    <length>20</length>
    <type>Text</type>
</CustomField>