force-app/main/default/objects/Case/fields/Innova_Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Innova_Resolved_Date__c</fullName>
    <description>Resoled Date Time</description>
    <label>Resolved Date</label>
    <type>DateTime</type>
</CustomField>