force-app/main/default/objects/Case/fields/Innova_Resolved_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Innova_Resolved_Date_Time__c</fullName>
    <formula>IF( ISPICKVAL( Status ,&apos;Resolved&apos;),  LastModifiedDate ,  ClosedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resolved Date/Time</label>
    <type>DateTime</type>
</CustomField>