force-app/main/default/objects/Case/fields/Innova_Response_Violated__c.field-meta.xml
<CustomField>
    <fullName>Innova_Response_Violated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Response Violated</label>
    <type>Checkbox</type>
</CustomField>