force-app/main/default/objects/Case/fields/Innova_Service1__c.field-meta.xml
<CustomField>
    <fullName>Innova_Service1__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Enterprise Infrastructure</fullName>
                <isActive>false</isActive>
                <label>Enterprise Infrastructure</label>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Field Support and Operations</fullName>
            </value>
            <value>
                <fullName>Finance Services</fullName>
            </value>
            <value>
                <fullName>HR Services</fullName>
                <label>HR Services [For US Employees only]</label>
            </value>
            <value>
                <fullName>IT Services</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>New Hire Request</fullName>
                <isActive>false</isActive>
                <label>New Hire Request</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Termination Request</fullName>
                <isActive>false</isActive>
                <label>Termination Request</label>
            </value>
            <value>
                <fullName>Test1</fullName>
                <isActive>false</isActive>
                <label>Test1</label>
            </value>
            <value>
                <fullName>Test2</fullName>
                <isActive>false</isActive>
                <label>Test2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>