force-app/main/default/objects/Case/fields/Innova_Service_Request_Details__c.field-meta.xml
<CustomField>
    <fullName>Innova_Service_Request_Details__c</fullName>
    <label>Service Request Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>