force-app/main/default/objects/Case/fields/Innova_Service_Request_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Innova_Service_Request_Trigger__c</fullName>
    <label>Service Request Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware Request</fullName>
            </value>
            <value>
                <fullName>Onboarding Request</fullName>
            </value>
            <value>
                <fullName>Termination Request</fullName>
            </value>
            <value>
                <fullName>New Hire Application /Software</fullName>
            </value>
            <value>
                <fullName>Software/Application Request</fullName>
            </value>
            <value>
                <fullName>New Hire w/ Bundles</fullName>
            </value>
            <value>
                <fullName>IT Request</fullName>
            </value>
            <value>
                <fullName>Signature Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>