force-app/main/default/objects/Case/fields/Innova_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Innova_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>