force-app/main/default/objects/Case/fields/Innova_Subcategory1__c.field-meta.xml
<CustomField>
    <fullName>Innova_Subcategory1__c</fullName>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Innova_Category1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>401k</fullName>
            </value>
            <value>
                <fullName>Able</fullName>
                <isActive>false</isActive>
                <label>Able</label>
            </value>
            <value>
                <fullName>Able - Front Office Tier 3 Vendor</fullName>
                <isActive>false</isActive>
                <label>Able - Front Office Tier 3 Vendor</label>
            </value>
            <value>
                <fullName>Able Onboarding</fullName>
            </value>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Access/Permissions Management</fullName>
            </value>
            <value>
                <fullName>Access Control</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Account Creation</fullName>
            </value>
            <value>
                <fullName>Account Creation - Volt Service Desk</fullName>
            </value>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Account Modification</fullName>
            </value>
            <value>
                <fullName>Account Termination/Disable</fullName>
            </value>
            <value>
                <fullName>Active Directory</fullName>
                <isActive>false</isActive>
                <label>Active Directory</label>
            </value>
            <value>
                <fullName>ADA</fullName>
            </value>
            <value>
                <fullName>Additional Bullhorn Details</fullName>
                <isActive>false</isActive>
                <label>Additional Bullhorn Details</label>
            </value>
            <value>
                <fullName>Address Book</fullName>
            </value>
            <value>
                <fullName>Adjustments AR Bill</fullName>
            </value>
            <value>
                <fullName>Adjustments - Branch</fullName>
            </value>
            <value>
                <fullName>Adjustments - SAS</fullName>
            </value>
            <value>
                <fullName>Adobe Acrobat DC</fullName>
                <isActive>false</isActive>
                <label>Adobe Acrobat DC</label>
            </value>
            <value>
                <fullName>Adobe Acrobat Pro DC</fullName>
                <isActive>false</isActive>
                <label>Adobe Acrobat Pro DC</label>
            </value>
            <value>
                <fullName>Adobe Creative Cloud</fullName>
                <isActive>false</isActive>
                <label>Adobe Creative Cloud</label>
            </value>
            <value>
                <fullName>Adobe Reader</fullName>
                <isActive>false</isActive>
                <label>Adobe Reader</label>
            </value>
            <value>
                <fullName>Adra</fullName>
                <isActive>false</isActive>
                <label>Adra</label>
            </value>
            <value>
                <fullName>Ads</fullName>
                <isActive>false</isActive>
                <label>Ads</label>
            </value>
            <value>
                <fullName>Alere eScreen</fullName>
                <isActive>false</isActive>
                <label>Alere eScreen</label>
            </value>
            <value>
                <fullName>Alias</fullName>
                <isActive>false</isActive>
                <label>Alias</label>
            </value>
            <value>
                <fullName>AntiVirus</fullName>
                <isActive>false</isActive>
                <label>AntiVirus</label>
            </value>
            <value>
                <fullName>Anti Virus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>