force-app/main/default/objects/Case/fields/Innova_User_Present_in_Queue__c.field-meta.xml
<CustomField>
    <fullName>Innova_User_Present_in_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Present in Queue</label>
    <type>Checkbox</type>
</CustomField>