force-app/main/default/objects/Case/fields/Innova_Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Innova_Vendor_Name__c</fullName>
    <label>Vendor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>