force-app/main/default/objects/Case/fields/Innova_Violated_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Innova_Violated_Escalation__c</fullName>
    <label>Violated Escalation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queue Manager (L1)</fullName>
            </value>
            <value>
                <fullName>Escalate to other (L2)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>