force-app/main/default/objects/Case/fields/Innova_VIP__c.field-meta.xml
<CustomField>
    <fullName>Innova_VIP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VIP</label>
    <type>Checkbox</type>
</CustomField>