force-app/main/default/objects/Case/fields/Innova_Warning_Time__c.field-meta.xml
<CustomField>
    <fullName>Innova_Warning_Time__c</fullName>
    <description>This field is used in Entitlement process warning</description>
    <label>Warning Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warning after 1 Hrs</fullName>
            </value>
            <value>
                <fullName>1st Warning</fullName>
            </value>
            <value>
                <fullName>2nd Warning</fullName>
            </value>
            <value>
                <fullName>3rd Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>