force-app/main/default/objects/Case/fields/ISC_Can_Process__c.field-meta.xml
<CustomField>
    <fullName>ISC_Can_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Process</label>
    <type>Checkbox</type>
</CustomField>