force-app/main/default/objects/Case/fields/ISC_Category__c.field-meta.xml
<CustomField>
    <fullName>ISC_Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ISC_Category__c.Visibility__c</field>
            <operation>equals</operation>
            <value>All, Agent Only</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ISC_Category__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>