force-app/main/default/objects/Case/fields/ISC_Current_Queue__c.field-meta.xml
<CustomField>
    <fullName>ISC_Current_Queue__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Current Queue</label>
    <referenceTo>ISC_Queue_Setting__c</referenceTo>
    <relationshipLabel>Cases - As Current</relationshipLabel>
    <relationshipName>Cases_As_Current</relationshipName>
    <type>Lookup</type>
</CustomField>