force-app/main/default/objects/Case/fields/ISC_Description_Formatted__c.field-meta.xml
<CustomField>
    <fullName>ISC_Description_Formatted__c</fullName>
    <label>Description (Formatted)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>